--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -53,3 +53,15 @@ body {
 [type='checkbox']:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
+
+.layout-wrapper .sidebar-wrapper {
+  left: -308px;
+  transition: left 0.5s ease-in-out;
+}
+.layout-wrapper.active .sidebar-wrapper {
+  left: 0;
+}
+.overflow-style-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
