--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,23 +4,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
   }
 }
 
-html {
-  background: #fafafa;
-}
 body {
   font-family: "Urbanist", sans-serif;
+  background: rgb(250 250 250 / 1);
 }
 
 [type='checkbox'], [type='radio'] {
@@ -64,4 +84,116 @@ body {
 .overflow-style-none {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+.layout-wrapper .body-wrapper .header-wrapper {
+  width: calc(100% - 96px);
+  transition: width 0.5s ease-in-out;
+}
+.layout-wrapper.active .body-wrapper .header-wrapper {
+  width: calc(100% - 308px);
+  transition: width 0.5s ease-in-out;
+}
+.layout-wrapper .body-wrapper {
+  margin-left: 96px;
+  transition: margin-left 0.5s ease-in-out;
+}
+.layout-wrapper.active .body-wrapper {
+  margin-left: 208px;
+}
+
+.layout-wrapper .body-wrapper .drawer-btn {
+  opacity: 100;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.layout-wrapper.active .body-wrapper .drawer-btn {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.form-radio, .form-checkbox {
+  height: 1.25rem;
+  width: 1.25rem;
+  cursor: pointer;
+  border-radius: .25rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(224 230 237 / var(--tw-border-opacity));
+  background-color: transparent;
+  --tw-text-opacity: 1;
+  color: rgb(67 97 238 / var(--tw-text-opacity));
+  --tw-shadow: 0 0 #0000 !important;
+  --tw-shadow-colored: 0 0 #0000 !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+  outline: 2px solid transparent !important;
+  outline-offset: 2px !important;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+  --tw-ring-offset-width: 0px !important;
+}
+
+table.table-hover>thead>tr>th, table.table-hover>tbody>tr>td {
+  padding: .75rem 1rem !important;
+  font-size: .875rem;
+  line-height: 1.25rem;
+}
+
+table.table-hover tbody tr:hover {
+  background-color: #e0e6ed33 !important;
+}
+
+table.table-hover tbody tr {
+  border-bottom-width: 1px;
+  border-color: #e0e6ed66 !important;
+}
+#my-superset-container iframe {
+  width: 100% !important;
+  height: 100vh !important;
 }
